tests/dataset/tpc-ds/compiler/c/q44.error
/tmp/q44.c: In function ‘test_TPCDS_Q44_simplified’:
/tmp/q44.c:246:42: error: invalid operands to binary == (have ‘int’ and ‘tmp_item_t’)
  246 |   if (!(test_TPCDS_Q44_simplified_result ==
      |                                          ^~
/tmp/q44.c: In function ‘main’:
/tmp/q44.c:277:25: warning: implicit declaration of function ‘ss_item_list_t_create’ [-Wimplicit-function-declaration]
  277 |   ss_item_list_t tmp6 = ss_item_list_t_create(tmp5.len);
      |                         ^~~~~~~~~~~~~~~~~~~~~
/tmp/q44.c:277:25: error: invalid initializer
/tmp/q44.c:281:30: warning: implicit declaration of function ‘store_sale_list_t_create’ [-Wimplicit-function-declaration]
  281 |     store_sale_list_t tmp8 = store_sale_list_t_create(_gp.items.len);
      |                              ^~~~~~~~~~~~~~~~~~~~~~~~
/tmp/q44.c:281:30: error: invalid initializer
/tmp/q44.c:303:27: error: invalid initializer
  303 |   list_int grouped_base = (tmp6);
      |                           ^
/tmp/q44.c:311:23: error: request for member ‘avg_profit’ in something not a structure or union
  311 |     tmp16[tmp14] = (-x.avg_profit);
      |                       ^
/tmp/q44.c:327:14: warning: implicit declaration of function ‘first’ [-Wimplicit-function-declaration]
  327 |   int best = first(tmp13);
      |              ^~~~~
/tmp/q44.c:334:21: error: request for member ‘avg_profit’ in something not a structure or union
  334 |     tmp24[tmp22] = x.avg_profit;
      |                     ^
/tmp/q44.c:351:15: warning: implicit declaration of function ‘int_create’; did you mean ‘list_int_create’? [-Wimplicit-function-declaration]
  351 |   int tmp29 = int_create(item_len);
      |               ^~~~~~~~~~
      |               list_int_create
/tmp/q44.c:355:30: error: request for member ‘item_sk’ in something not a structure or union
  355 |     if (!(i.i_item_sk == best.item_sk)) {
      |                              ^
/tmp/q44.c:358:10: error: request for member ‘data’ in something not a structure or union
  358 |     tmp29.data[tmp30] = i.i_product_name;
      |          ^
/tmp/q44.c:361:8: error: request for member ‘len’ in something not a structure or union
  361 |   tmp29.len = tmp30;
      |        ^
/tmp/q44.c:367:31: error: request for member ‘item_sk’ in something not a structure or union
  367 |     if (!(i.i_item_sk == worst.item_sk)) {
      |                               ^
/tmp/q44.c:370:10: error: request for member ‘data’ in something not a structure or union
  370 |     tmp32.data[tmp33] = i.i_product_name;
      |          ^
/tmp/q44.c:373:8: error: request for member ‘len’ in something not a structure or union
  373 |   tmp32.len = tmp33;
      |        ^
/tmp/q44.c:386:38: error: incompatible types when assigning to type ‘int’ from type ‘result_item_t’
  386 |   test_TPCDS_Q44_simplified_result = result;
      |                                      ^~~~~~
/tmp/q44.c:390:13: error: request for member ‘data’ in something not a structure or union
  390 |   free(tmp29.data);
      |             ^
/tmp/q44.c:391:13: error: request for member ‘data’ in something not a structure or union
  391 |   free(tmp32.data);
      |             ^
