tests/dataset/tpc-ds/compiler/c/q44.c
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
// Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  double *data;
} list_float;
static list_float list_float_create(int len) {
  list_float l;
  l.len = len;
  l.data = calloc(len, sizeof(double));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static double _avg_float(list_float v) {
  if (v.len == 0)
    return 0;
  double sum = 0;
  for (int i = 0; i < v.len; i++)
    sum += v.data[i];
  return sum / v.len;
}
static void _json_int(int v) { printf("%d", v); }
static void _json_float(double v) { printf("%g", v); }
static void _json_string(char *s) { printf("\"%s\"", s); }
static void _json_list_int(list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_int(v.data[i]);
  }
  printf("]");
}
static void _json_list_float(list_float v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_float(v.data[i]);
  }
  printf("]");
}
static void _json_list_string(list_string v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_string(v.data[i]);
  }
  printf("]");
}
static void _json_list_list_int(list_list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_list_int(v.data[i]);
  }
  printf("]");
}
typedef struct {
  int key;
  list_int items;
} _GroupInt;
typedef struct {
  int len;
  int cap;
  _GroupInt *data;
} list_group_int;
static list_group_int _group_by_int(list_int src) {
  list_group_int res;
  res.len = 0;
  res.cap = 0;
  res.data = NULL;
  for (int i = 0; i < src.len; i++) {
    int key = src.data[i];
    int idx = -1;
    for (int j = 0; j < res.len; j++)
      if (res.data[j].key == key) {
        idx = j;
        break;
      }
    if (idx == -1) {
      if (res.len >= res.cap) {
        res.cap = res.cap ? res.cap * 2 : 4;
        res.data = (_GroupInt *)realloc(res.data, sizeof(_GroupInt) * res.cap);
      }
      res.data[res.len].key = key;
      res.data[res.len].items = list_int_create(0);
      idx = res.len++;
    }
    _GroupInt *g = &res.data[idx];
    g->items.data =
        (int *)realloc(g->items.data, sizeof(int) * (g->items.len + 1));
    g->items.data[g->items.len++] = src.data[i];
  }
  return res;
}
typedef struct {
  const char *best_performing;
  const char *worst_performing;
} tmp_item_t;
typedef struct {
  int len;
  tmp_item_t *data;
} tmp_item_list_t;
tmp_item_list_t create_tmp_item_list(int len) {
  tmp_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int ss_item_sk;
  int ss_store_sk;
  double ss_net_profit;
} store_sale_t;
typedef struct {
  int len;
  store_sale_t *data;
} store_sale_list_t;
store_sale_list_t create_store_sale_list(int len) {
  store_sale_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(store_sale_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int i_item_sk;
  const char *i_product_name;
} item_t;
typedef struct {
  int len;
  item_t *data;
} item_list_t;
item_list_t create_item_list(int len) {
  item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int item_sk;
  double avg_profit;
} ss_item_t;
typedef struct {
  int len;
  ss_item_t *data;
} ss_item_list_t;
ss_item_list_t create_ss_item_list(int len) {
  ss_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(ss_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int best_performing;
  int worst_performing;
} result_item_t;
typedef struct {
  int len;
  result_item_t *data;
} result_item_list_t;
result_item_list_t create_result_item_list(int len) {
  result_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(result_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

static int test_TPCDS_Q44_simplified_result;
static void test_TPCDS_Q44_simplified() {
  if (!(test_TPCDS_Q44_simplified_result ==
        (tmp_item_t){.best_performing = "ItemA",
                     .worst_performing = "ItemB"})) {
    fprintf(stderr, "expect failed\n");
    exit(1);
  }
}

int main() {
  store_sale_t store_sales[] = {
      (store_sale_t){.ss_item_sk = 1, .ss_store_sk = 1, .ss_net_profit = 5.0},
      (store_sale_t){.ss_item_sk = 1, .ss_store_sk = 1, .ss_net_profit = 5.0},
      (store_sale_t){
          .ss_item_sk = 2, .ss_store_sk = 1, .ss_net_profit = (-1.0)}};
  int store_sales_len = sizeof(store_sales) / sizeof(store_sales[0]);
  item_t item[] = {(item_t){.i_item_sk = 1, .i_product_name = "ItemA"},
                   (item_t){.i_item_sk = 2, .i_product_name = "ItemB"}};
  int item_len = sizeof(item) / sizeof(item[0]);
  store_sale_list_t tmp1 = create_store_sale_list(store_sales_len);
  int tmp2_data[store_sales_len];
  list_int tmp2 = {0, tmp2_data};
  int tmp3 = 0;
  for (int i4 = 0; i4 < store_sales_len; i4++) {
    store_sale_t ss = store_sales[i4];
    tmp1.data[tmp3] = ss;
    tmp2.data[tmp3] = ss.ss_item_sk;
    tmp3++;
  }
  tmp1.len = tmp3;
  tmp2.len = tmp3;
  list_group_int tmp5 = _group_by_int(tmp2);
  ss_item_list_t tmp6 = ss_item_list_t_create(tmp5.len);
  int tmp7 = 0;
  for (int gi = 0; gi < tmp5.len; gi++) {
    _GroupInt _gp = tmp5.data[gi];
    store_sale_list_t tmp8 = store_sale_list_t_create(_gp.items.len);
    for (int i9 = 0; i9 < _gp.items.len; i9++) {
      tmp8.data[i9] = tmp1.data[_gp.items.data[i9]];
    }
    tmp8.len = _gp.items.len;
    struct {
      int key;
      store_sale_list_t items;
    } g = {_gp.key, tmp8};
    list_float tmp10 = list_float_create(g.items.len);
    int tmp11 = 0;
    for (int i12 = 0; i12 < g.items.len; i12++) {
      store_sale_t x = g.items.data[i12];
      tmp10.data[tmp11] = x.ss_net_profit;
      tmp11++;
    }
    tmp10.len = tmp11;
    tmp6.data[tmp7] =
        (ss_item_t){.item_sk = g.key, .avg_profit = _avg_float(tmp10)};
    tmp7++;
  }
  tmp6.len = tmp7;
  list_int grouped_base = (tmp6);
  list_int grouped = grouped_base;
  list_int tmp13 = list_int_create(grouped.len);
  int *tmp16 = (int *)malloc(sizeof(int) * grouped.len);
  int tmp14 = 0;
  for (int tmp15 = 0; tmp15 < grouped.len; tmp15++) {
    int x = grouped.data[tmp15];
    tmp13.data[tmp14] = x;
    tmp16[tmp14] = (-x.avg_profit);
    tmp14++;
  }
  tmp13.len = tmp14;
  for (int i19 = 0; i19 < tmp14 - 1; i19++) {
    for (int i20 = i19 + 1; i20 < tmp14; i20++) {
      if (tmp16[i19] > tmp16[i20]) {
        int tmp17 = tmp16[i19];
        tmp16[i19] = tmp16[i20];
        tmp16[i20] = tmp17;
        int tmp18 = tmp13.data[i19];
        tmp13.data[i19] = tmp13.data[i20];
        tmp13.data[i20] = tmp18;
      }
    }
  }
  int best = first(tmp13);
  list_int tmp21 = list_int_create(grouped.len);
  int *tmp24 = (int *)malloc(sizeof(int) * grouped.len);
  int tmp22 = 0;
  for (int tmp23 = 0; tmp23 < grouped.len; tmp23++) {
    int x = grouped.data[tmp23];
    tmp21.data[tmp22] = x;
    tmp24[tmp22] = x.avg_profit;
    tmp22++;
  }
  tmp21.len = tmp22;
  for (int i27 = 0; i27 < tmp22 - 1; i27++) {
    for (int i28 = i27 + 1; i28 < tmp22; i28++) {
      if (tmp24[i27] > tmp24[i28]) {
        int tmp25 = tmp24[i27];
        tmp24[i27] = tmp24[i28];
        tmp24[i28] = tmp25;
        int tmp26 = tmp21.data[i27];
        tmp21.data[i27] = tmp21.data[i28];
        tmp21.data[i28] = tmp26;
      }
    }
  }
  int worst = first(tmp21);
  int tmp29 = int_create(item_len);
  int tmp30 = 0;
  for (int tmp31 = 0; tmp31 < item_len; tmp31++) {
    item_t i = item[tmp31];
    if (!(i.i_item_sk == best.item_sk)) {
      continue;
    }
    tmp29.data[tmp30] = i.i_product_name;
    tmp30++;
  }
  tmp29.len = tmp30;
  int best_name = first(tmp29);
  int tmp32 = int_create(item_len);
  int tmp33 = 0;
  for (int tmp34 = 0; tmp34 < item_len; tmp34++) {
    item_t i = item[tmp34];
    if (!(i.i_item_sk == worst.item_sk)) {
      continue;
    }
    tmp32.data[tmp33] = i.i_product_name;
    tmp33++;
  }
  tmp32.len = tmp33;
  int worst_name = first(tmp32);
  result_item_t result = (result_item_t){.best_performing = best_name,
                                         .worst_performing = worst_name};
  printf("{");
  _json_string("best_performing");
  printf(":");
  _json_int(result.best_performing);
  printf(",");
  _json_string("worst_performing");
  printf(":");
  _json_int(result.worst_performing);
  printf("}");
  test_TPCDS_Q44_simplified_result = result;
  test_TPCDS_Q44_simplified();
  free(tmp13.data);
  free(tmp21.data);
  free(tmp29.data);
  free(tmp32.data);
  return 0;
}
